Updated Logstash